# new-chat

./: .env  Cargo.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
chat_core/: Cargo.toml
chat_core/src/: lib.rs
chat_core/src/middlewares/: auth.rs  mod.rs  request_id.rs  server_time.rs
chat_core/src/utils/: jwt.rs
chat_server/: Cargo.toml  app.yaml  test.rest
chat_server/fixtures/: decoding.pem  encoding.pem  test.sql
chat_server/src/: config.rs  error.rs  lib.rs  main.rs  openapi.rs
chat_server/src/handlers/: auth.rs  chat.rs  messages.rs  mod.rs  workspace.rs
chat_server/src/middlewares/: auth.rs  chat.rs  mod.rs  request_id.rs  server_time.rs
chat_server/src/models/: chat.rs  file.rs  message.rs  mod.rs  user.rs  workspace.rs
chat_server/src/utils/: jwt.rs
chat_test/: Cargo.toml  chat.yaml  notify.yaml
chat_test/tests/: chat.rs
migrations/: 20251228013748_initial.sql  20251228013801_workspace.sql  20251230073521_triggers.sql
notify_server/: Cargo.toml  index.html
notify_server/src/: config.rs  error.rs  lib.rs  main.rs  notif.rs  sse.rs
sql/: init.sql
src/: main.rs
src/handlers/: messages.rs
