[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
http-body-util = "0.1.3"
jwt-simple = "0.12.13"
serde = { workspace = true }
serde_json = "1.0.147"
serde_yaml = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["compression-full", "cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.19.0", features = ["v7", "serde"] }

[dev-dependencies]
hyper = { version = "1.8.1", features = ["full"] }
sqlx-db-tester = "0.7.1"
