[package]
name = "chat-server"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { workspace = true }
axum-extra = { version = "0.12.3", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
hex = "0.4.3"
http-body-util = "0.1.3"
jwt-simple = "0.12.13"
mime_guess = "2.0.5"
serde = { workspace = true }
serde_json = "1.0.147"
serde_yaml = { workspace = true }
sha1 = "0.10.6"
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7.17", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = [
    "compression-full",
    "fs",
    "cors",
    "trace",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.19.0", features = ["v7", "serde"] }

[dev-dependencies]
hyper = { version = "1.8.1", features = ["full"] }
sqlx-db-tester = "0.7.1"
