[package]
name = "chat_test"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chat-server = { workspace = true, features = ["test-util"] }
chat_core = { workspace = true }
futures = "0.3.31"
notify-server = { workspace = true }
reqwest = { version = "0.13.1", features = ["json", "multipart", "stream"] }
reqwest-eventsource = "0.6.0"
serde = { workspace = true }
serde_json.workspace = true
tokio = { workspace = true }
